--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -6,31 +6,71 @@
   padding: 0;
 }
 
-.container {
-  border: 1px solid black;
-  padding: 20px;
+html,
+body {
+  height: 100vh;
 }
 
-.message-box {
-  margin: 10px auto;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f5f5;
+}
+
+section {
+  display: none;
+}
+
+.section-active {
+  display: initial;
+}
+
+.navbar {
+  width: 100%;
+}
+
+.toast {
+  font-size: 1rem;
   width: fit-content;
-  border: 1px solid rgba(35, 35, 201, 0.664);
-  border-radius: 10px;
-  padding: 5px;
+}
+
+.home .h1 {
+  font-size: 6rem;
+  margin-top: 4rem;
 }
 
 form {
-  width: fit-content;
-  margin: 0 auto;
-  text-align: center;
+  width: 100%;
+  max-width: 330px;
 }
 
-form > input {
-  display: inline-block;
-  margin-bottom: 10px;
-  margin-right: 20px;
+form .checkbox {
+  font-weight: 400;
+}
+
+form > div {
+  width: 300px;
+  margin-bottom: 3px;
 }
 
 form > .btn {
-  margin-top: 20px;
+  margin-top: 8px;
+}
+
+form .form-floating:focus-within {
+  z-index: 2;
+}
+
+form .form-dropdown {
+  font-size: 1rem;
+  padding: 0 4%;
+  margin: 8px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+form .form-dropdown select {
+  border-radius: 4px;
 }
